Feature: Implement inventory management and buff selection for presidents in Protect the President gamemode